src/main/java/org/example/interpreter/error/NoMainFunctionInterpretingException.java
package org.example.interpreter.error;public class NoMainFunctionInterpretingException {
}
